fix overflow in mobile viewport

--- a/client/src/pages/layout/styles.scss
+++ b/client/src/pages/layout/styles.scss
@@ -1,15 +1,15 @@
 .layout {
   width: 100vw;
-  height: auto;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
 
   &_background {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: -1;
   }
 
